--- a/app/styles/dataCards/column-chart.sass
+++ b/app/styles/dataCards/column-chart.sass
@@ -10,17 +10,15 @@ $tooltip-name-color: #333
 $tooltip-value-color: #888
 $tooltip-background-color: #F0F0F0
 $tick-height: 1rem
+$tick-font-size: 0.75rem
 
 div.column-chart
 
   div.chart-scroll
     overflow-x: auto
     overflow-y: hidden
-    position: absolute
-    top: 0
 
   div.column-chart-wrapper
-    position: relative
 
     .bar-group.active .bar
       &.unfiltered
@@ -246,6 +244,7 @@ div.column-chart
       color: $chart-tick-color
       text-align: right
       margin-top: -$tick-height
+      font-size: $tick-font-size
 
 .card.expanded
 
