--- a/app/styles/dataCards/main.sass
+++ b/app/styles/dataCards/main.sass
@@ -146,25 +146,7 @@ $card-description-max-line-count: 2
 $card-description-line-height: 1.3em
 $card-description-transition-duration: 0.5s
 .card
-  color: $fgColor
-  background: $card-bg-color
-  padding: $card-padding
-  position: relative
-  .expandButton
-    font-family: "SSAir"
-    position: absolute
-    top: 5px
-    right: 23px
-    a
-      cursor: pointer
-      display: block
-      width: 0
-      position: relative
-      color: #888
-      &:hover
-        color: #ccc
-      &:before
-        content: '⤢'
+
   .description
     position: relative
     line-height: $card-description-line-height
